[gd_scene load_steps=2 format=3 uid="uid://b58muftj2st80"]

[ext_resource type="Script" path="res://src/TaikozlibDecrypt.gd" id="1_spseo"]

[node name="Taikozlibdecrypt" type="Node"]
script = ExtResource("1_spseo")

[node name="MemoryUsage" type="Label" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -21.5
offset_top = -23.0
offset_right = 21.5
grow_horizontal = 2
grow_vertical = 0

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Taikozlib" type="Button" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -72.0
offset_top = -15.5
offset_right = 72.0
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2
text = "Taiko zlib decrypt"

[node name="TaikozlibLoad" type="FileDialog" parent="."]
title = "Open File(s)"
initial_position = 2
size = Vector2i(452, 400)
ok_button_text = "Open"
file_mode = 1
access = 2

[node name="TaikozlibSave" type="FileDialog" parent="."]
initial_position = 2
size = Vector2i(452, 400)
access = 2

[connection signal="pressed" from="Control/Taikozlib" to="." method="_on_taikozlib_pressed"]
[connection signal="file_selected" from="TaikozlibLoad" to="." method="_on_taikozlib_load_file_selected"]
[connection signal="files_selected" from="TaikozlibLoad" to="." method="_on_taikozlib_load_files_selected"]
[connection signal="file_selected" from="TaikozlibSave" to="." method="_on_taikozlib_save_file_selected"]
